--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Order summary card</title>
   </head>
@@ -15,7 +15,7 @@
         <p class="card_paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
       <div class="card_plan">
-        <img class="icon_music" src="/order-summary-component-main/images/icon-music.svg" alt="icon-music">
+        <img class="icon_music" src="images/icon-music.svg" alt="icon-music">
         <p class="card_plan_p">Annual Plan <span>$59.99/year</span></p>
         <a href="#" class="change_link">Change</a>
       </div>
